src-tauri/out.txt
    Checking stickplay v1.0.0 (C:\Users\huach\source\repos\StickPlay\src-tauri)
error[E0597]: `conn` does not live long enough
   --> src\commands.rs:202:31
    |
201 |         let conn = db.conn.lock().unwrap();
    |             ---- binding `conn` declared here
202 |         if let Ok(mut stmt) = conn.prepare("SELECT genre FROM video_genres WHERE video_id = ?1") {
    |                               ^^^^--------------------------------------------------------------
    |                               |
    |                               borrowed value does not live long enough
    |                               a temporary with access to the borrow is created here ...
...
209 |     }
    |     -
    |     |
    |     `conn` dropped here while still borrowed
    |     ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `std::result::Result<rusqlite::Statement<'_>, rusqlite::Error>`
    |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
    |
208 |         };
    |          +

warning: unused variable: `c`
   --> src\scanner.rs:501:17
    |
501 |             let c = lum(p_c);
    |                 ^ help: if this is intentional, prefix it with an underscore: `_c`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0597`.
warning: `stickplay` (lib) generated 1 warning
error: could not compile `stickplay` (lib) due to 1 previous error; 1 warning emitted
